--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1261,7 +1261,7 @@ header{
                     font-size: 15px;
                     letter-spacing: -.5px;
                     &:before{
-                        bottom: 10px;
+                        height: 1px;
                     }
                 }
             }
