--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -672,7 +672,7 @@ header{
 }
 
 /*w1,w2,w3,w4,w5*/
-.work-page{
+.work-wrap{
     .back{
         a{
             opacity: 0;
@@ -1194,7 +1194,7 @@ header{
             letter-spacing: 15px;
         }
     }
-    .work-page{
+    .work-wrap{
         .back{
             a{
                 top: 20px;
