--- a/src/scss/default/_base.scss
+++ b/src/scss/default/_base.scss
@@ -91,7 +91,7 @@ button{
     border-radius:0; 
     padding:0; 
     overflow:visible;
-    cursor:pointer
+    cursor:none;
 }
 i,em,address { 
     font-style:normal; 
