--- a/src/scss/default/_base.scss
+++ b/src/scss/default/_base.scss
@@ -76,6 +76,7 @@ textarea
     appearance: none;
 	margin:0;
 	border:0;
+    border-radius: 0;
 	padding:0;
 	display:inline-block;
 	vertical-align:middle;
